[package]
name = "admin_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hashing for API keys
argon2 = "0.5"

# UUID for client IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Stream utilities
tokio-stream = "0.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "admin_backend"
path = "src/main.rs"

[[bin]]
name = "admin-cli"
path = "src/bin/admin_cli.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3